--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,7 @@
 
 
 <body>
-  
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
 
 <!-- TODO DONE: Add SDKs for Firebase products that you want to use
@@ -54,14 +53,17 @@
 <div id="login-info" hidden=true>
   <h2>Login info:</h2>
   {% if user_data %}    <dl>
-      <dt>Name</dt><dd>{{ user_data['name'] }}</dd>
-      <dt>Email</dt><dd>{{ user_data['email'] }}</dd>
-      <dt>Last 10 visits</dt><dd>
+      <dt>Name: </dt><dd>{{ user_data['name'] }}</dd><br>
+      <dt>Email:</dt><dd>{{ user_data['email'] }}</dd><br>
+      <h4>Last 10 visits</h4><dd>
         {% for time in times %}         
          <p>{{ time['timestamp'] }}</p>
         {% endfor %} </dd>
     </dl>
   {% elif error_message %}    <p>Error: {{ error_message }}</p>
   {% endif %}</div>
+
+<a href="/about">About Us</a>
+ 
 </body>
 </html>
